platform-services/janitor-bot/tests/snapshots/integration__push__forgejo-forward-to-argocd.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: proxy_pass
        ran: true
    dry_run: false
    name: forward-push-to-argocd
external_requests:
  - method: POST
    path: /api/webhook
    body:
      ref: refs/heads/main
      repository:
        full_name: anurag/k8s
    service: argocd
